@@ -1,7 +1,11 @@
+2006-10-05  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/Matrix.R ([<-): also for value "Matrix" or "matrix"
+
 2006-10-04  Douglas Bates  <bates@stat.wisc.edu>
 
 	* DESCRIPTION (Version): 0.9975-2
-	
+
 	* inst/include/Matrix_stubs.c (M_cholmod_sparse_to_triplet): export more symbols
 
 2006-10-02  Douglas Bates  <bates@R-project.org>
